lesson-7/modules/vpc/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = var.vpc_cidr_block
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name    = "${var.vpc_name}-vpc"
    }
  
}

# Public subnets
resource "aws_subnet" "public" {
    count                       = length(var.public_subnets)
    vpc_id                      = aws_vpc.main.id
    cidr_block                  = var.public_subnets[count.index]
    availability_zone           = var.availability_zones[count.index]
    map_public_ip_on_launch     =   true

    tags = {
        Name    = "${var.vpc_name}-public-subnet-${count.index + 1}"
  }
  
}

# Private subnets
resource "aws_subnet" "private" {
    count                       = length(var.private_subnets)
    vpc_id                      = aws_vpc.main.id
    cidr_block                  = var.private_subnets[count.index]
    availability_zone           = var.availability_zones[count.index]

    tags = {
        Name    = "${var.vpc_name}-private-subnet-${count.index + 1}"
  }
  
}

# Internet Gateway for public subnets
resource "aws_internet_gateway" "igw" {
    vpc_id      =   aws_vpc.main.id

    tags = {
        Name    = "${var.vpc_name}-igw"
    }

    depends_on = [
        aws_subnet.public,
        aws_subnet.private
      ]
  
}

resource "time_sleep" "wait_before_igw_detach" {
  destroy_duration = "30s"
  depends_on = [aws_internet_gateway.igw]
}

# Elastic IP for private subnets
resource "aws_eip" "nat_eip" {
    domain = "vpc"

    tags = {
        Name = "${var.vpc_name}-eip"
    }
  
}

# NAT Gateway
resource "aws_nat_gateway" "nat" {
    allocation_id = aws_eip.nat_eip.id
    subnet_id = aws_subnet.public[0].id
    
    tags = {
      Name = "${var.vpc_name}-natg"
    }

    depends_on = [aws_internet_gateway.igw]
  
}
